--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##############################
 .mtj.tmp/
 *.class
+*.jar
 *.war
 *.ear
 *.nar
@@ -81,3 +82,8 @@ nb-configuration.xml
 ## OS X
 ##############################
 .DS_Store
+
+##############################
+## TestNG
+##############################
+test-output/
